# imap

./: .gitmodules  conftest.py  pyproject.toml
.github/workflows/: test-imap-data-access.yml  test-imap-l3-processing.yml  test-imap-processing.yml  test-sds-data-manager.yml  test.yml
imap/: __init__.py
sds-data-manager-wrap/: pyproject.toml
